<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SplashScreen</string>
    <string name="email_address">Email address</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">we will send you an one time password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>

    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="login">login</string>
    <string name="your_location">Your Location</string>
    <string name="enter_email_adress">Enter Email Adress</string>
    <string name="full_name">Full Name</string>
    <string name="adress_op">Adress(optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="sign_up">Sign up</string>
    <string name="didnt_receive_otp">Didnt receive OTP</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="user_name">User name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="your_order">Your Order</string>
    <string name="profile">Profile</string>
    <string name="your_history">Your History</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="logout">logout</string>
    <string name="skip">Skip</string>
    <string name="flat_house_no_building_company_apartment">Flat, House no, Building, Company, Apartment</string>
    <string name="landmark_e_g_near_bilal_hospital">LandMark e.g. near Bilal Hospital</string>
    <string name="town_city">Town/City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin_code">PIN Code</string>
    <string name="area_colony_street_sector_village">Area, Colony, Street, Sector, Village</string>
    <string name="save_address">Save Address</string>
    <string name="gps_location">GPS Location</string>
    <string name="address">Address</string>
    <string name="vName">Name:</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="minimum_charges">Visiting Charges:</string>
    <string name="rs_20000">Rs.20000</string>
    <string name="available_services">Available Services:-</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="please_select_your_address">Please Select Your Address :</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD).</string>
    <string name="place_order">Place Order</string>
    <string name="upi_gateway">UPI GATEWAY</string>
    <string name="credit_card_debit_card">Credit Card / Debit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="select_required_services">*Select Required Services.</string>
    <string name="book_now">Book Now</string>
    <string name="confirm_order">Confirm Order</string>
</resources>