<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendorSubServices"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:background="@drawable/location_bar_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vName"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/vendorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/vendor_name"
                android:textColor="@color/black"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum_charges"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/minCharges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/rs_20000"
                android:textColor="@color/black"
                android:textStyle="normal"/>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/location_black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/available_services"
                android:textColor="@color/white"
                android:textStyle="italic" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="220dp">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textSize="18sp"
                android:text="@string/select_required_services"
                android:textColor="@color/white"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/bookNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/background_button"
            android:text="@string/book_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>