<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookNow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:background="@drawable/location_bar_button">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_your_address"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic|bold" />

       <CheckBox
           android:id="@+id/Address"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:text="@string/address"
           android:padding="10dp"
           android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:background="@drawable/location_bar_button">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LaDate"
            android:hint="@string/select_date"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:background="@drawable/location_bar_button">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LaTime"
            android:hint="@string/select_time"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_margin="10dp"
        android:padding="20dp">

        <Button
            android:id="@+id/Payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/background_button"
            android:text="@string/choose_payment"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>