<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROFILE"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginLeft="140dp"/>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="40dp"
        android:layout_margin="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="25sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            style="@style/Widget.MaterialComponents.TextView"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="25sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            style="@style/Widget.MaterialComponents.TextView"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="25sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            style="@style/Widget.MaterialComponents.TextView"
            />


    </LinearLayout>

</LinearLayout>